<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Name Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:text="@string/c_Product_Name"
            android:textSize="17dip" />

        <!-- Input Name -->

        <EditText
            android:id="@+id/inputName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true" />

        <!-- Ref Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:text="@string/c_Product_Ref"
            android:textSize="17dip" />

        <!-- Input Ref -->

        <EditText
            android:id="@+id/inputRef"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true" />

        <!-- CreatedAt Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:text="@string/c_Product_date"
            android:textSize="17dip" />

        <!-- Input CreatedAt -->

        <EditText
            android:id="@+id/inputCreatedAt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- Price Label -->

            <TextView
                android:layout_width="65dip"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/c_Price"
                android:textSize="17sp" />

            <!-- Input Price -->

            <EditText
                android:id="@+id/inputPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/c_price_"
                android:singleLine="true" />
            <!-- android:inputType="numberDecimal" -->
        </LinearLayout>

        <!-- Tax Label mmmmmmmm -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/c_Tax"
                android:textSize="17sp" />

            <!-- Input tax -->

            <EditText
                android:id="@+id/inputTax"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/c_price_"
                android:singleLine="true" />
            <!-- android:inputType="number" -->

        </LinearLayout>
        <!-- AVAILABILITY Label mmmmmmmm -->

        <CheckBox
            android:id="@+id/inputAvailability"
            android:layout_width="120dip"
            android:layout_height="fill_parent"
            android:text="@string/c_Availability" />
        <!-- SIZE Label mmmmmmmm -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="65dip"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/c_size"
                android:textSize="17sp" />

            <!-- Input SIZE -->

            <EditText
                android:id="@+id/inputSize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/c_size_"
                android:singleLine="true" />
            <!-- android:inputType="text" -->

        </LinearLayout>
        <!-- CATEGORIES Label mmmmmmmm -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="105dip"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="@string/c_Categories"
                android:textSize="17sp" />

            <!-- Input CATEGORIES -->

            <EditText
                android:id="@+id/inputCategories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:hint="@string/c_p"
                android:inputType="textAutoComplete"
                android:singleLine="true" />
        </LinearLayout>

        <!-- Description Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:text="@string/c_Description"
            android:textSize="17dip" />

        <!-- Input description -->

        <EditText
            android:id="@+id/inputDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:gravity="top"
            android:lines="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/adresseURL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15px"
                android:layout_weight="0.3"
                android:hint="URL:" />

            <Button
                android:id="@+id/btnShareImageProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:drawablePadding="1dip"
                android:drawableTop="@drawable/ic_syn"
                android:onClick="buttonClicks"
                android:text="@string/c_Share_Image_Products" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- Button Create Product -->

            <Button
                android:id="@+id/btnSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_save"
                android:drawablePadding="5dip"
                android:text="@string/c_Save_Changes" />

            <!-- Button Create Product -->

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_del"
                android:drawablePadding="5dip"
                android:text="@string/c_Delete" />
        </LinearLayout>

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_return"
            android:drawablePadding="5dip"
            android:text="@string/c_Return" />
    </LinearLayout>

</ScrollView>