<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/c_Link_Default_Picture" />

    <EditText
        android:id="@+id/input_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_Link_Default_Picture"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text=""
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/c_Hach_Code" />

    <EditText
        android:id="@+id/input_Hach"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_Hach_Code"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text=""
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/save1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_save"
            android:drawablePadding="5dip"
            android:text="@string/c_Save_Changes" />

        <Button
            android:id="@+id/load1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_coreupdate"
            android:drawablePadding="5dip"
            android:text="@string/c_Load_Changes" />
    </LinearLayout>

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="15dp"
        android:drawableLeft="@drawable/ic_return"
        android:drawablePadding="5dip"
        android:text="@string/c_Return" />

</LinearLayout>