<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_pic"
        android:orientation="vertical" >

        <!-- picture profile -->

        <ImageView
            android:id="@+id/picture_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon" />

        <!-- button  login -->

        <ImageView
            android:id="@+id/button_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logout_button" />

        <!-- user name -->

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Facebook" />
    </LinearLayout>
    <!-- prrrrrrrrrrrroduct -->

    <EditText
        android:id="@+id/inputName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_Product_Name"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17dip" />

    <!-- Price Label -->

    <EditText
        android:id="@+id/inputPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_Price"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17dip" />

    <!-- Description Label -->

    <EditText
        android:id="@+id/inputDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_Description"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17dip" />

    <EditText
        android:id="@+id/txtUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="URL Picture: "
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17dip" />

    <EditText
        android:id="@+id/linkSite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Site: "
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17dip" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dip"
        android:drawableLeft="@drawable/ic_syn"        
        android:onClick="buttonClicks"
        android:text="Post" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="5dip"
        android:drawableLeft="@drawable/ic_return"        
        android:text="@string/c_Return" />

</LinearLayout>